Enforce universal brand green (#34D164): update Tailwind green palette, replace hardcoded hex (#2F8140/#32CD32) across frontend and assets, align manifest and SVGs, verify via dev preview.

--- a/mobile_login.html
+++ b/mobile_login.html
@@ -39,7 +39,7 @@
             background-color: #6c757d;
             cursor: not-allowed;
         }
-        h1 { color: #2F8140; text-align: center; }
+        h1 { color: #34D164; text-align: center; }
         h2 { color: #333; }
     </style>
 </head>
