--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/png" href="/Logo-Icon-Green.png" />
+    <link rel="apple-touch-icon" href="/Logo-Icon-Green.png" />
     <title>ServiceHub</title>
   </head>
   <body>
